[tool.poetry]
name = "NextBusHK"
version = "0.1.0"
description = ""
authors = ["Akshay <araa@connect.ust.hk>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "*"

[tool.poetry.dev-dependencies]
pytest = "^4.6"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
